--- a/pom.xml
+++ b/pom.xml
@@ -47,7 +47,10 @@
             <artifactId>moneta</artifactId>
             <version>1.3</version>
         </dependency>
-
+        <dependency>
+            <groupId>com.jayway.jsonpath</groupId>
+            <artifactId>json-path</artifactId>
+        </dependency>
         <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
